--- a/public/css-js/freelancer-info.css
+++ b/public/css-js/freelancer-info.css
@@ -49,11 +49,12 @@
     position: relative;
     top:-50px;
     left:25px;
-    max-width:110px;
-    max-height: 110px;
+    width:110px;
+    height: 110px;
     z-index:2;
     border-radius:50%;
     border:5px white solid;
+    object-fit: cover;
  }
  .previewprofile{
      position: relative;
