--- a/public/css-js/showAllappointments.css
+++ b/public/css-js/showAllappointments.css
@@ -9,7 +9,7 @@
 }
 
 .ul-tab {
-  width: 100%;
+  width: 98%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -43,9 +43,8 @@
 #first-dynamic-table,
 #first-dynamic-table-2 {
   width: 100%;
-  background: #ffffff;
-  box-shadow: 0px 0px 3px rgb(18 16 16 / 30%);
-  padding: 35px 15px;
+  
+ 
    color: #36494f;
 }
 
@@ -110,3 +109,103 @@ transform: scale(.98)
   transform: scale(.98)
   
   }
+
+  .product-pic2{
+    width:90px;
+    height: 90px;
+    object-fit: cover;
+  }
+  .pend{
+    background:#4F2982 !important;
+    color:white !important;
+    outline:none;
+    border:none;
+    box-shadow:none !important;
+  }
+  
+  .noAppointment{
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgb(0 0 0 / 10%);
+    border-bottom:4px solid #4F2982;
+    
+  }
+  .image3{
+    height:250px;
+    width: 250px;
+    display: block;
+    margin: 0 auto;
+    
+  }
+  .message{
+    font-size:18px;
+    color:rgb(124, 124, 124); 
+    margin-top: auto;
+    text-align: center;
+  }
+  .pend2{
+    background:none !important;
+    color:#4F2982 !important;
+   border: 1px solid #4F2982;
+  }
+
+  .appointment{
+    background-color: #FAFAFD;
+    
+  }
+  .divinside{
+    background-color: white;
+    padding:20px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgb(0 0 0 / 10%);
+    border-bottom:4px solid #4F2982;
+  }
+  .appointment2{
+    box-shadow: 0 2px 5px rgb(0 0 0 / 10%);
+    
+  }
+
+  .nav-default-img2{
+    object-fit: cover;
+    margin-right: 10px;
+    height:40px;
+    width:40px;
+    border-radius: 50%;
+}
+
+.see-more-content {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.addReadMore.showlesscontent .SecSec,
+  .addReadMore.showlesscontent .readLess {
+      display: none;
+  }
+
+  .addReadMore.showmorecontent .readMore {
+      display: none;
+  }
+
+  .addReadMore .readMore,
+  .addReadMore .readLess {
+      margin-left: 2px;
+      color: #4F2982;
+      cursor: pointer;
+  }
+
+  .addReadMoreWrapTxt.showmorecontent .SecSec,
+  .addReadMoreWrapTxt.showmorecontent .readLess {
+      display: block;
+  }
+
+  .swiper-button-prev, .swiper-button-next {
+     
+      color: #4F2982 !important;
+    }
