with Email Verification, and Kind of the Latest Version

--- a/public/css-js/main.css
+++ b/public/css-js/main.css
@@ -344,8 +344,8 @@
     
 }
 .card .thumb {
-    max-width: 300px;
-    max-height: 170px;
+    width: 280px;
+    height: 180px;
     object-fit: cover;
     background-position: center center;
     border-radius:15px 15px 0px 0px;
